	PR 4453 	* format.c (bfd_check_format_matches): Don't accept archives as 	fully matching unless they have a map.